overlay off screen fix

--- a/packages/oceanfront/src/scss/_overlay.scss
+++ b/packages/oceanfront/src/scss/_overlay.scss
@@ -5,9 +5,8 @@
   top: 0;
   left: 0;
   bottom: 0;
-  padding: var(--overlay-pad, 0px)
-    var(--overlay-dyn-pad-right, var(--overlay-pad, 0px))
-    var(--overlay-pad, 0px) var(--overlay-dyn-pad-left, var(--overlay-pad, 0px));
+  padding: var(--overlay-pad, 0px) var(--overlay-pad, 0px) var(--overlay-pad, 0px) 0 ;
+  margin: 0 var(--overlay-dyn-margin-right, 0px) 0 var(--overlay-dyn-margin-left, 0px);
   pointer-events: none;
   right: 0;
   z-index: 200;
